syntax="proto3";
package protocol;

message HeartbeatRequest {

}

message HeartbeatReply {

}

message PFDMessage {
    oneof heartbeat_type {
        HeartbeatRequest request = 1;
        HeartbeatReply reply = 2;
    }
}

message BEBMessage {
    bytes payload = 1;
}

message URBMessage {
    bytes payload = 1;
    string source = 2;

    // The nonce is added to each message which needs to be unique
    uint64 nonce = 3;
}
